SERVER-112283: Terminate NDV iteration when when derivative is very close to zero, fix NDV assertion flakiness (#42465)

GitOrigin-RevId: 9dfdb3570861bff681ded12bae78bdbb2be8b870